--- a/Local-Turistico/css/style.css
+++ b/Local-Turistico/css/style.css
@@ -1,3 +1,117 @@
 :root {
     font-family: "Open Sans", sans-serif;
+    color: #333333;
+}
+
+body {
+    padding: 72px;
+}
+
+img {
+    border-radius: 28px;
+    width: 100%;
+}
+
+h1 {
+    font-size: 36px;
+    margin: 0px;
+    padding: 0px;
+    margin: 8px auto 40px;
+    color: #1B1B1B;
+}
+
+h2 {
+    font-size: 32px;
+    margin: 2px auto 8px;
+    padding: 0px;
+    color: #1B1B1B;
+}
+
+h3 {
+    font-size: 28px;
+    margin: 0px;
+    padding: 0px;
+    margin-top: 20px;
+    color: #1B1B1B;
+}
+
+p {
+    margin: 0px;
+}
+header img + p {
+    margin-top: 24px;
+    font-style: italic;
+    text-align: center;
+}
+
+.emphasis {
+    text-transform: uppercase;
+    color: #E1624F;
+    font-weight: bold;
+}
+
+hr {
+    border: solid 1px#D9D9D9;
+    margin: 40px auto 64px;
+}
+
+#introdution {
+    margin-bottom: 64px;
+}
+
+#templo-haedong-yonggungsa, #tempo-beomeo-sa {
+    margin-bottom: 48px;
+}
+
+#parque-yongdusan {
+    margin-bottom: 80px;
+}
+
+.recomendations {
+    font-weight: bold;
+}
+
+ul {
+    margin-top: 2px;
+    padding-left: 25px;
+}
+
+.history {
+    color: #0C51A7;
+}
+
+#couples {
+    color: #591B98;
+}
+
+#families {
+    color: #E5245E;
+}
+
+#budget {
+    color: #E95E10;
+}
+
+.marks {
+    font-weight: bold;
+}
+
+ul li::marker {
+    color: #333333;
+  }
+
+main + p {
+    text-align: center;
+}
+
+footer {
+    font-family: "Alice", serif;
+    margin-top: 65px;
+    text-align: center;
+}
+
+footer img {
+    height: 16px;
+    width: 16px;
+    vertical-align: middle;
 }
